allprojects {
    apply plugin: 'java'

    group 'io.spe'
    version '1.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(19))
        }
    }

    repositories {
        mavenCentral()
        // javacpp snapshot
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }

    test {
        useJUnitPlatform()
        jvmArgs(['--enable-preview'])
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['--enable-preview']
    }
}

subprojects {
    afterEvaluate {
        dependencies {
            testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
            // https://mvnrepository.com/artifact/org.jetbrains/annotations
            implementation 'org.jetbrains:annotations:23.0.0'
        }
    }
}
